# FamilyRoutine

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
.devcontainer/: devcontainer.json
backend/: Cargo.toml  Dockerfile
backend/migrations/: 01_init_schema.sql  02_exercice_add  02_extend_features.sql  02_init_schema.sql
backend/src/: main.rs
backend/src/api/: auth_handlers.rs  auth_middleware.rs  energy_handler.rs  ex_handlers.rs  fam_handlers.rs  geo_handlers.rs  mod.rs  place_handlers.rs  router.rs  user_handlers.rs  wallet_handlers.rs
backend/src/domain/: errors.rs
backend/src/infrastructure/: database.rs
backend/src/services/: auth_service.rs  mod.rs  password_manager.rs  workout_calc.rs
frontend/: .flutter-plugins-dependencies  .gitignore  README.md  package-lock.json  package.json  pubspec.yaml
frontend/.dart_tool/: package_config.json  package_graph.json
frontend/android/app/: build.gradle.kts
frontend/assets/i18n/: de.json  en.json  fr.json  ja.json  ru.json  zh.json
frontend/ios/Runner/: Info.plist
frontend/ios/Runner.xcodeproj/: project.pbxproj
frontend/lib/: main.dart
frontend/lib/core/: api_svc.dart  app_router.dart
frontend/lib/domain/: models.dart
frontend/lib/providers/: api_prov.dart  auth_provider.dart
frontend/lib/ui/auth/: auth_screen.dart
frontend/lib/ui/dicts/: cities_dict_screen.dart  exercise_detail_screen.dart  exercises_screen.dart  streets_dict_screen.dart
frontend/linux/: CMakeLists.txt
frontend/linux/runner/: my_application.cc
frontend/macos/Runner.xcodeproj/: project.pbxproj
frontend/test/: widget_test.dart
frontend/web/: index.html  manifest.json  package-lock.json  package.json  vite.config.ts
frontend/web/src/: App.tsx  index.css  main.tsx
frontend/windows/: CMakeLists.txt
frontend/windows/runner/: Runner.rc  main.cpp
shared-schema/: Cargo.toml
shared-schema/src/: lib.rs
(+34 files in other folders)
