[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5", features = ["trace", "cors"] }

sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono", "macros", "migrate"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

dotenvy = "0.15" 
tracing = "0.1" 
tracing-subscriber = "0.3"

shared-schema = { path = "../shared-schema" }

argon2 = "0.5"
validator = { version = "0.16", features = ["derive"] }

uuid = { version = "1.7", features = ["v4", "serde"] }

jsonwebtoken = "9.3"
axum-extra = { version = "0.9", features = ["cookie"] }
chrono = { version = "0.4", features = ["serde"] }
time = "0.3"
