[package]
name = "shared-schema"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.7", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
ts-rs = { version = "8.1", features = ["uuid-impl", "chrono-impl"] }

sqlx = { version = "0.7", default-features = false, features = ["macros", "uuid", "postgres"] }